Tagged the 3.2.4 release from /tags/builds/3.2.x/3.2.4-RC1.