@@ -17,8 +17,6 @@ package com.google.enterprise.connector.util.database;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.LinkedList;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
 import javax.sql.DataSource;
 
@@ -31,8 +29,6 @@ import javax.sql.DataSource;
  * @since 2.8
  */
 public class DatabaseConnectionPool {
-  private static final Logger LOGGER =
-      Logger.getLogger(DatabaseConnectionPool.class.getName());
   private final DataSource dataSource;
   private final LinkedList<Connection> connections = new LinkedList<Connection>();
 
@@ -69,17 +65,17 @@ public class DatabaseConnectionPool {
    * @throws SQLException if a Connection cannot be obtained
    */
   public synchronized Connection getConnection() throws SQLException {
-    while (!connections.isEmpty()) {
+    Connection conn;
+    try {
       // Get a cached connection, but check if it is still functional.
-      Connection conn = connections.removeFirst();
-      if (isAlive(conn)) {
-        return conn;
-      }
-      // Close dead connection.
-      close(conn);
+      do {
+        conn = connections.remove(0);
+      } while (isDead(conn));
+    } catch (IndexOutOfBoundsException e) {
+      // Pool is empty.  Get a new connection from the dataSource.
+      conn = dataSource.getConnection();
     }
-    // Pool is empty.  Get a new connection from the dataSource.
-    return dataSource.getConnection();
+    return conn;
   }
 
   /**
@@ -89,7 +85,7 @@ public class DatabaseConnectionPool {
    * @param connection a Connection to to return to the pool
    */
   public synchronized void releaseConnection(Connection connection) {
-    connections.addFirst(connection);
+    connections.add(0, connection);
   }
 
   /**
@@ -104,17 +100,16 @@ public class DatabaseConnectionPool {
   }
 
   /**
-   * Returns {@code true} if the connection is alive,
-   * {@code false} if it appears to be dead.
+   * Returns {@code true} if the connection is dead,
+   * {@code false} if it appears to be OK.
    */
-  private boolean isAlive(Connection conn) {
+  private boolean isDead(Connection conn) {
     try {
-      // Using timeout as 1 second. If the timeout period expires before 
-      // the operation completes, this method returns false. 
-      return conn.isValid(1);
-    } catch (SQLException e) {
-      LOGGER.log(Level.INFO, "Connection is dead", e);
+      conn.getMetaData();
       return false;
+    } catch (SQLException e) {
+      close(conn);
+      return true;
     }
   }
 
@@ -122,8 +117,8 @@ public class DatabaseConnectionPool {
   private void close(Connection conn) {
     try {
       conn.close();
-    } catch (SQLException ignored) {
-      
+    } catch (SQLException e) {
+      // Ignored.
     }
   }
 }
